--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
         }
     </style>
 
+
+    <div>
+        <form action="">
+            <input type="text" placeholder="Your Name" name="user_name">
+            <input type="text" placeholder="Your Lastname" name="user_lastname">
+            <input type="text" placeholder="Subject" name="user_subject">
+            <textarea name="body_message" id="mess" cols="30" rows="10"></textarea>
+            <button>Send</button>
+        </form>
+    </div>
+
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script></script>
 </body>
