--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send Us an Email</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+
+  <title>Send Message</title>
 </head>
+
 <body>
-    
+    <nav class="navbar fixed-top navbar-dark bg-dark">
+        <a href="#" class="navbar-brand">Navbar Fixed Top</a>
+    </nav>
 
-    <div>
-        <form action="">       
-            <input type="text" placeholder="Your Name" name="user_name">            
-            <input type="text" placeholder="Your Lastname" name="user_lastname">
-            <input type="text" placeholder="Subject" name="user_subject">
-            <textarea name="body_message" id="mess" cols="30" rows="10"></textarea>
-            <button>Send</button>
-        </form>
-    </div>
-
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    crossorigin="anonymous"></script>
+    <!-- Telegram Bot Settings -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    
     <script></script>
+
 </body>
+
 </html>
