Background Light Color

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-dark bg-light">
         <a href="#" class="navbar-brand">Navbar Fixed Top</a>
     </nav>
 
