--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar fixed-top navbar-dark bg-light">
-        <a href="#" class="navbar-brand"><img src="img/logo.png"></a>
+        <a href="https://www.kazminerals.com/" target="_blank" class="navbar-brand"><img src="img/logo.png" width="100"></a>
     </nav>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
