--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar fixed-top navbar-dark bg-light">
         <div class="container">
             <a href="https://www.kazminerals.com/" target="_blank" class="navbar-brand"><img src="img/logo.png" width="100"></a>
-            <h3 class="ml-auto text-info display-5">IT KBL</h3>
+            <h3 class="ml-auto color-005587 display-5">IT KBL</h3>
         </div>
     </nav>
 
