Events for buttns

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <div class="ml-auto">
                 <input type="submit" id="ru" class="btn btn-outline-dark" value="Ru">
-                <input type="submit" id="en" class="btn btn-dark " value="En">
+                <input type="submit" id="en" class="btn btn-dark" value="En">
             </div>
         </div>
     </nav>
@@ -61,7 +61,7 @@
         let ruBtn = document.getElementById("ru");
         ruBtn.addEventListener("click", ()=> {
            document.getElementById("en-form").style.display = "none"; 
-           document.getElementById("en-form").style.display = "none";
+           document.getElementById("ru").style.display = "btn btn-dark";
         });
     </script>
 
