--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <textarea name="email" id="email" class="form-control"></textarea>
             </div>
             <div class="form-group">
-                <button class="btn btn-outline-light btn-block">Send</button>
+                <button class="btn btn-outline-light btn-block">Отправить</button>
             </div>
         </div>
 
