styles for buttons were changed

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <a href="https://www.kazminerals.com/" target="_blank" class="navbar-brand"><img src="img/logo.png" width="100"></a>
             
             <div class="ml-auto">
-                <input type="submit" id="ru" class="btn btn-outline-dark" value="Ru">
-                <input type="submit" id="en" class="btn btn-dark" value="En">
+                <input type="submit" id="ru" class="btn btn-dark" value="Ru">
+                <input type="submit" id="en" class="btn btn-outline-dark" value="En">
             </div>
         </div>
     </nav>
