--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
         });
 
         app.addEventListener("click", () => {
+            let name = document.getElementById("name").value;
+            let subject = document.getElementById("subject").value;
+            let email = document.getElementById("email").value;
+
             tg.close();
         });
 
