--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
            enBtn.classList.add("btn-dark");
         });
 
-        app.addEventListener("click", () => {
+        sendBtn.addEventListener("click", () => {
            
             let name = document.getElementById("name").value;
             let subject = document.getElementById("subject").value;
