--- a/phone.html
+++ b/phone.html
@@ -27,25 +27,14 @@
         </div>
     </nav>
 
-    <div class="home">
-        <div id="form" class="container">
-            <div class="form-group">
-                <label id="label-name" class="text-light" for="name">Имя Фамили (английскими буквами)</label>
-                <input class="form-control" type="text" id="name" placeholder="Enter name lastname">                
-            </div>
-            <div class="form-group">
-                <label id="label-subject" class="text-light" for="name">Тема письма</label>
-                <input class="form-control" type="text" id="subject" placeholder="Enter subject">
-            </div>
-            <div class="form-group">
-                <label id="label-email" class="text-light" for="name">Сообщение</label>
-                <textarea name="email" id="email" class="form-control"></textarea>
-            </div>
-            <div class="form-group">
-                <input type="submit" id="send" class="btn btn-outline-light btn-block" value="Отправить">
-            </div>            
-        </div>       
-        <div id="error"></div>
+    <div class="card text-center">
+        <div class="card-body">
+            <h4 class="card-title">Card title</h4>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">
+                <small class="text-muted">Last updated 3 mins ago</small>
+            </p>
+        </div>
     </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
