--- a/phone.html
+++ b/phone.html
@@ -30,10 +30,11 @@
     <div class="home">
         <div class="card text-center">
             <div class="card-body">
-                <h4 class="card-title">Card title</h4>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h4 class="card-title">Наши контакты</h4>
+                <p><a href="#" class="card-text">+77750111911</a></p>
+                <p><a href="#" class="card-text">11911</a></p>
                 <p class="card-text">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                    <small class="text-muted">IT KBL </small>
                 </p>
             </div>
         </div>
