--- a/phone.html
+++ b/phone.html
@@ -28,14 +28,16 @@
     </nav>
 
     <div class="home">
-        <div class="card text-center">
-            <div class="card-body">
-                <h4 class="card-title">Наши контакты</h4>
-                <p><a href="#" class="card-text">+77750111911</a></p>
-                <p><a href="#" class="card-text">11911</a></p>
-                <p class="card-text">
-                    <small class="text-muted">IT KBL </small>
-                </p>
+        <div class="container">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h4 class="card-title">Наши контакты</h4>
+                    <p><a href="#" class="card-text">+77750111911</a></p>
+                    <p><a href="#" class="card-text">11911</a></p>
+                    <p class="card-text">
+                        <small class="text-muted">IT KBL </small>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
