--- a/phone.html
+++ b/phone.html
@@ -32,7 +32,7 @@
             <div class="card text-center">
                 <div class="card-body">
                     <h4 id="contact-title" class="card-title">Позвонить нам</h4>
-                    <p class="phone"><a href="tel:+77750111911" class="card-text">+77750111911</a></p>
+                    <p class="phone"><a href="tel:87750111911" class="card-text">+77750111911</a></p>
                     <p><a href="#" class="card-text">11911</a></p>
                     <p class="card-text">
                         <small class="text-muted">IT KBL </small>
