--- a/phone.html
+++ b/phone.html
@@ -32,8 +32,8 @@
             <div class="card text-center">
                 <div class="card-body">
                     <h4 id="contact-title" class="card-title">Позвонить нам</h4>
-                    <p class="phone"><a href="tel:87750111911" >+77750111911</a></p>
-                    <p><a href="tel:11911" class="card-text">11911</a></p>
+                    <a href="tel:+77750111911" >+77750111911</a><br>
+                    <a href="tel:11911" class="card-text">11911</a>
                     <p class="card-text">
                         <small class="text-muted">IT KBL </small>
                     </p>
