Lastname syntaxis error

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="home">
         <div id="form" class="container">
             <div class="form-group">
-                <label id="label-name" class="text-light" for="name">Имя Фамили (английскими буквами)</label>
+                <label id="label-name" class="text-light" for="name">Имя Фамилия (английскими буквами)</label>
                 <input class="form-control" type="text" id="name" placeholder="Enter name lastname">                
             </div>
             <div class="form-group">
