lang were edited

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 error.innerText = 'You entered your first and last name incorrectly';
                 return;
             } else if (name.length < 5 && isKz) {
-                error.innerText = 'You entered your first and last name incorrectly';
+                error.innerText = 'Аты - жөніңізді қате тердіңіз';
                 return;
             }
 
@@ -177,7 +177,7 @@
                 error.innerText = 'Email subject too short';
                 return;
             } else if (subject.length < 3 && isKz) {
-                error.innerText = 'Email subject too short';
+                error.innerText = 'Өте аз хабарлама жаздыңыз';
                 return;
             }
 
@@ -188,7 +188,7 @@
                 error.innerText = 'The content of the letter is too short';
                 return;
             } else if (email.length < 5 && isKz) {
-                error.innerText = 'The content of the letter is too short';
+                error.innerText = 'Хабарлама тақырыбы тым қысқа';
                 return;
             }
             
