let employeId.value

--- a/employeid.html
+++ b/employeid.html
@@ -62,7 +62,7 @@
 
         sendBtn.addEventListener("click", () => {
            
-          
+           let employeId = employeId.value;
            // Sending data to telegram bot
            let data = {
             employeId: employeId,
