const sba vas changed

--- a/employeid.html
+++ b/employeid.html
@@ -68,7 +68,7 @@
 
             const sba = url.split("=")[1];
 
-            console.log(id);
+            console.log(sba);
            
            // Sending data to telegram bot
            let data = {
