input number was changed

--- a/employeid.html
+++ b/employeid.html
@@ -28,7 +28,7 @@
       <div id="form" class="container">
         <div class="form-group">
             <label id="label-employeId" class="text-light" for="employeId">Табельный номер </label><span  class="text-danger"> *</span>
-            <input class="form-control" type="text" id="employeId" placeholder="7833">                
+            <input class="form-control" type="number" id="employeId" placeholder="7833">                
         </div>
         
         <div class="form-group">
