--- a/employeid.html
+++ b/employeid.html
@@ -25,17 +25,21 @@
     </nav>
 
     <div class="home">
-      <div id="form" class="container">
-        <div class="form-group">
-            <label id="label-employeId" class="text-light" for="employeId">Табельный номер </label><span  class="text-danger"> *</span>
-            <input class="form-control" type="number" id="employeId" placeholder="7833">                
-        </div>
-        
-        <div class="form-group">
-            <input type="submit" id="find" class="btn btn-outline-light btn-block" value="Найти">
-        </div>  
- 
-    </div> 
+        <div id="form" class="container">
+            <div class="form-group">
+                <label id="label-employeId" class="text-light" for="employeId">Табельный номер </label><span class="text-danger"> *</span>
+                <input class="form-control" type="number" id="employeId" placeholder="7833">
+            </div>
+            <div class="form-group">
+                <label id="label-lastname" class="text-light" for="lastname">Фамилия </label><span class="text-danger"> *</span>
+                <input class="form-control" type="text" id="lastname" placeholder="Оспанов">
+            </div>
+
+            <div class="form-group">
+                <input type="submit" id="find" class="btn btn-outline-light btn-block" value="Найти">
+            </div>
+
+        </div> 
     </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -61,6 +65,7 @@
         find.addEventListener("click", () => {
 
             let employeId = document.getElementById("employeId").value;
+            let lastname = document.getElementById("lastname").value;
             console.log(employeId)
           
             let url = location.search;
@@ -72,6 +77,7 @@
            // Sending data to telegram bot
            let data = {
                employeId: employeId,
+               lastname: lastname,
                sba: sba,
            }
 
