--- a/employeid.html
+++ b/employeid.html
@@ -66,8 +66,8 @@
 
          //   let employeId = document.getElementById("employeId").value;
             let lastname = document.getElementById("lastname").value;
-            console.log(employeId)
-          
+         //   console.log(employeId)
+            console.log(lastname)
             let url = location.search;
 
             let sba = url.split("=")[1];
